# Civic-Link

./: .env.example  .env.production  .env.staging  .gitignore  AGENTS.md  Dockerfile  Makefile  add_password_hash_column.sql  alembic.ini  backend_verification_report_v1.md  docker-compose.prod.yml  docker-compose.yml  emulate_dart_auth.py  init.sql  nginx.conf  postgresql.conf  pyproject.toml  requirements.txt  test_hash.py  test_login.py  verify_telemetry_isolate.py  work_done.md
.github/workflows/: backend-ci.yml  flutter-ci.yml  pr-checks.yml
.windsurf/workflows/: agent.md  backlog.md
Keynotes/: Technical_Achievement_Report_2026-05-02_15-24-00_IST.md
app/: main.py  privacy_worker.py  safety_stress_test.py  seed_kphb.py  telemetry_sim.py  telemetry_simulation.py  test_auth_flow.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  auth.py  civic_score.py  commutes.py  matches.py  telemetry.py
app/core/: config.py  database.py  exceptions.py  logging_config.py  redis.py  security.py
app/middleware/: rate_limit.py
app/models/: __init__.py  audit.py  base.py  civic_score.py  commute.py  match.py  user.py
app/schemas/: commute.py  match.py  user.py
app/services/: __init__.py  audit_service.py  civic_score_service.py  commute_service.py  match_service.py  telemetry_service.py  user_service.py
civic_link/: README.md  pubspec.yaml
civic_link/android/app/: build.gradle.kts
civic_link/ios/Runner/: Info.plist
civic_link/ios/Runner.xcodeproj/: project.pbxproj
civic_link/lib/: main.dart
civic_link/lib/providers/: auth_provider.dart  civic_score_provider.dart  commute_provider.dart  commute_search_provider.dart  match_provider.dart
civic_link/lib/services/: auth_service.dart  telemetry_isolate.dart
civic_link/lib/ui/screens/: commute_create_screen.dart  commute_detail_screen.dart  commute_search_screen.dart  dashboard_screen.dart  match_detail_screen.dart  my_commutes_screen.dart  my_matches_screen.dart  rating_screen.dart  registration_screen.dart  splash_screen.dart
civic_link/lib/utils/: privacy_crypto.dart
civic_link/linux/: CMakeLists.txt
civic_link/linux/runner/: my_application.cc
civic_link/macos/Runner.xcodeproj/: project.pbxproj
civic_link/web/: index.html
civic_link/windows/: CMakeLists.txt
civic_link/windows/runner/: Runner.rc  main.cpp
docker/redis/: redis.conf
documentation/: 01-Project-Overview.md  02-Architecture.md  03-Database-Schema.md  04-API-Reference.md  05-Testing-Guide.md  06-Development-Guide.md  07-Changelog.md  08-Flutter-UI-Specification.md  README.md  SESSION_LOG.md
migrations/: env.py
migrations/versions/: e14fe2c5ae57_initial_schema.py
scripts/: anonymize_data.py
tests/: conftest.py  test_safety_logic.py
(+10 files in other folders)
